--- a/WebPortalAPI/WebPortalAPI/Views/Shared/_Layout.cshtml
+++ b/WebPortalAPI/WebPortalAPI/Views/Shared/_Layout.cshtml
@@ -33,7 +33,12 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="UsersAcount">Users Account</a></li>
+                    @if (User.IsInRole("admin"))
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Notification">Notification</a></li>
+
+                        <li><a asp-area="" asp-controller="Home" asp-action="UsersAcount">Users Account</a></li>
+                    }
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
