--- a/WebPortalAPI/wwwroot/css/site.css
+++ b/WebPortalAPI/wwwroot/css/site.css
@@ -40,4 +40,11 @@ body {
     border: 1px solid #f3f3f3;
     padding: 10px;
 }
-
+.logo {
+height:50px;
+}
+text-Logo
+{
+    line-height:200px;
+  
+}
