--- a/WebPortalAPI/Areas/admin/Views/Admin/Dashboard.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Admin/Dashboard.cshtml
@@ -1,6 +1,7 @@
 ﻿@model WebPortalAPI.Areas.admin.Models.DashboardVM
 
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Dashboard";
 }
 
@@ -9,7 +10,10 @@
 <h4>DashboardVM</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6 col-layout outline">
+       
+    </div>
+    <div class="col-md-6 col-layout outline right-col-layout">
         <form asp-action="Dashboard">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
