--- a/WebPortalAPI/Areas/admin/Views/Admin/Index.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Admin/Index.cshtml
@@ -18,9 +18,14 @@
                 <span asp-validation-for="Header" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Body" class="control-label"></label>            
+                <label asp-for="Body" class="control-label"></label>
                 <textarea asp-for="Body" class="form-control" id="body"></textarea>
                 <span asp-validation-for="Body" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductDetail" class="control-label"></label>
+                <textarea asp-for="ProductDetail" class="form-control" id="detailproduct"></textarea>
+                <span asp-validation-for="ProductDetail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save Changes" class="btn btn-primary" />
