--- a/WebPortalAPI/Views/Home/Index.cshtml
+++ b/WebPortalAPI/Views/Home/Index.cshtml
@@ -25,3 +25,9 @@
     </div>
 
 </div>
+<div class="row">
+    <div class="col-sm-12">
+        <p class="">@Html.Raw(Model.ProductDetail)</p>
+    </div>
+
+</div>
