--- a/WebPortalAPI/Areas/admin/Views/Admin/Dashboard.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Admin/Dashboard.cshtml
@@ -11,6 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-6 col-layout outline">
+        @await Html.PartialAsync("FirebaseSettings.cshtml", Model.firebaseSettings)
        
     </div>
     <div class="col-md-6 col-layout outline right-col-layout">
