--- a/WebPortalAPI/Areas/admin/Views/_ViewImports.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebPortalAPI
 @using WebPortalAPI.Areas.admin.Models
+@namespace WebPortalAPI.Areas.Admin.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
