--- a/WebPortalAPI/wwwroot/images/site.css
+++ b/WebPortalAPI/wwwroot/images/site.css
@@ -80,5 +80,26 @@ height:640px;
     box-shadow: 2px 2px 9px -2px rgba(0, 0, 0, 0.75);
 }
 .firebaseContentBody {
-height:500px;
+    height: 500px;
+    background-color: #071f33;
 }
+    .firebaseContentBody > table {
+        background-color: #071f33;
+        color: white;
+    }
+
+        .firebaseContentBody > table th {
+            background-color: #163c5e;
+            border-right: 1px solid #485968;
+            color: white;
+        }
+
+        .firebaseContentBody > table td {
+            background-color: #273e52;
+            color: white;
+            border-bottom: 1px solid white;
+            border-right: 1px solid #485968;
+            height: 50px;
+            padding-top: 15px !important;
+            padding-bottom: 15px !important;
+        }
