--- a/WebPortalAPI/Areas/admin/Pages/FirebaseEdit.cshtml
+++ b/WebPortalAPI/Areas/admin/Pages/FirebaseEdit.cshtml
@@ -1,54 +1,77 @@
-﻿@page 
+﻿@page
+
 @model WebPortalAPI.Areas.Admin.Pages.EditModel
 
-<h4>FirebaseSetting</h4>
-<hr />
+
+<div class="row ">
+    <div class="col-sm-12 firebaseContentHeader box-Shadow-light">
+        <h1>Firebase Settings Management</h1>
+    </div>
+</div>
 <div class="row">
-    <div class="col-md-4">
-     
+    <div class="col-sm-12 addFirebaseBox">
+        <p>
+            <a asp-page="firebaseCreate">Add Firebase Setting</a>
+        </p>
+    </div>
+</div>
+<div class="row">
+
+    <div class="col-sm-12 box-Shadow-light firebaseEditbox">
+        
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="FirebaseSetting.ID" />
-            <div class="form-group">
-                <label asp-for="FirebaseSetting.ProfileName" class="control-label"></label>
-                <input asp-for="FirebaseSetting.ProfileName" class="form-control" />
-                <span asp-validation-for="FirebaseSetting.ProfileName" class="text-danger"></span>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label asp-for="FirebaseSetting.ProfileName" class="control-label"></label>
+                    <input asp-for="FirebaseSetting.ProfileName" class="form-control" />
+                    <span asp-validation-for="FirebaseSetting.ProfileName" class="text-danger" s></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirebaseSetting.ApplicationID" class="control-label"></label>
+                    <input asp-for="FirebaseSetting.ApplicationID" class="form-control" />
+                    <span asp-validation-for="FirebaseSetting.ApplicationID" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirebaseSetting.SenderID" class="control-label"></label>
+                    <input asp-for="FirebaseSetting.SenderID" class="form-control" />
+                    <span asp-validation-for="FirebaseSetting.SenderID" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirebaseSetting.DeviceID" class="control-label"></label>
+                    <input asp-for="FirebaseSetting.DeviceID" class="form-control" />
+                    <span asp-validation-for="FirebaseSetting.DeviceID" class="text-danger"></span>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label asp-for="FirebaseSetting.ApplicationID" class="control-label"></label>
-                <input asp-for="FirebaseSetting.ApplicationID" class="form-control" />
-                <span asp-validation-for="FirebaseSetting.ApplicationID" class="text-danger"></span>
+
+            <div class="col-sm-6">
+
+                <div class="form-group">
+                    <label asp-for="FirebaseSetting.RequestType" class="control-label"></label>
+                    <input asp-for="FirebaseSetting.RequestType" class="form-control" />
+                    <span asp-validation-for="FirebaseSetting.RequestType" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirebaseSetting.ContentType" class="control-label"></label>
+                    <input asp-for="FirebaseSetting.ContentType" class="form-control" />
+                    <span asp-validation-for="FirebaseSetting.ContentType" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirebaseSetting.FCMSendUrl" class="control-label"></label>
+                    <input asp-for="FirebaseSetting.FCMSendUrl" class="form-control" />
+                    <span asp-validation-for="FirebaseSetting.FCMSendUrl" class="text-danger"></span>
+                </div>                
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-success col-sm-4 pull-right" />
+                </div>
+               
             </div>
-            <div class="form-group">
-                <label asp-for="FirebaseSetting.SenderID" class="control-label"></label>
-                <input asp-for="FirebaseSetting.SenderID" class="form-control" />
-                <span asp-validation-for="FirebaseSetting.SenderID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirebaseSetting.DeviceID" class="control-label"></label>
-                <input asp-for="FirebaseSetting.DeviceID" class="form-control" />
-                <span asp-validation-for="FirebaseSetting.DeviceID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirebaseSetting.RequestType" class="control-label"></label>
-                <input asp-for="FirebaseSetting.RequestType" class="form-control" />
-                <span asp-validation-for="FirebaseSetting.RequestType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirebaseSetting.ContentType" class="control-label"></label>
-                <input asp-for="FirebaseSetting.ContentType" class="form-control" />
-                <span asp-validation-for="FirebaseSetting.ContentType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirebaseSetting.FCMSendUrl" class="control-label"></label>
-                <input asp-for="FirebaseSetting.FCMSendUrl" class="form-control" />
-                <span asp-validation-for="FirebaseSetting.FCMSendUrl" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+            
         </form>
     </div>
+
 </div>
 
 <div>
@@ -62,8 +85,9 @@
     string hello = "hola";
     man NewEmployee = new man();
 
-    public class man {
-        public  int id { get; set; }
+    public class man
+    {
+        public int id { get; set; }
         public string FirstName { get; set; }
         public string LastName { get; set; }
         public man()
@@ -73,4 +97,4 @@
         }
     }
 
- }
+}
