--- a/WebPortalAPI/wwwroot/css/site.css
+++ b/WebPortalAPI/wwwroot/css/site.css
@@ -100,3 +100,9 @@ height:500px;
         border-bottom: 1px solid white;
         border-right: 1px solid rgb(72, 89, 104);
  }
+.firebaseEditbox {
+    padding: 20px;
+    background-color: rgb(22, 60, 94);
+    color:white;
+}
+
