--- a/WebPortalAPI/wwwroot/css/site.css
+++ b/WebPortalAPI/wwwroot/css/site.css
@@ -52,9 +52,33 @@ text-Logo
 height:640px;
 
 }
-.outline {
-    outline:1px solid red;
-}
 .right-col-layout {
     background-color: gray;
+}
+#tag{
+    color:red;
+    width:100%;
+    text-align:center;
+    font-size:22px;
+}
+#title{
+    color:#ffffff;
+    width:100%;
+    text-align:center;
+    font-size:22px;
+}
+.top-section-logo {
+    text-align:center;
+}
+/*.outline {
+    outline: 1px solid #b6ff00;
+}*/
+.feature-icon-container{
+    text-align:center;
+    height:150px;
+}
+.feature-icon-container img {
+    margin:26px 39px;
+    font-size:70px;
+    height:70px;
 }
