--- a/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
@@ -8,13 +8,14 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-       
+        <link href="~/js/summernote/summernote.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link href="~/js/summernote/summernote.css" rel="stylesheet" />
     </environment>
 </head>
 <body>
@@ -90,7 +91,7 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="~/js/ckeditor/ckeditor.js"asp-append-version="true"></script>
-
+        <script src="~/js/summernote/summernote.js"></script>
 
     </environment>
   
