--- a/WebPortalAPI/Views/Shared/_Layout.cshtml
+++ b/WebPortalAPI/Views/Shared/_Layout.cshtml
@@ -30,13 +30,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                   
+
                     @if (User.IsInRole("admin"))
                     {
                         <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                
+                        <li><a asp-area="Admin" asp-controller="Admin" asp-action="Index">Edit Page Content</a></li>
                     }
                 </ul>
                 <partial name="_LoginPartial" />
@@ -46,7 +46,7 @@
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
         <hr />
         <footer>
