Cleaning up the house

--- a/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                     {
                         <li><a asp-area="Admin" asp-controller="Admin" asp-action="Index">Landing Page</a></li>
                         <li><a asp-area="Admin" asp-controller="Admin" asp-action="Dashboard">Dashboard</a></li>
-                        @*<li><a asp-area="Admin" asp-controller="Admin" asp-action="Notification">Notification</a></li>*@
+                        <li><a asp-page="/FileUploadIndex">File Upload</a></li>
                         <li><a asp-page="/firebaseIndex">Firebase Settings</a></li>
                         <li>
                             @Html.ActionLink("PushEvent", "PushEvent", "Admin",
