--- a/WebPortalAPI/Areas/admin/Views/Admin/Index.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Admin/Index.cshtml
@@ -11,12 +11,20 @@
 <div class="row">
     <div class="col-md-12">
         <form asp-action="Index">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="logo" class="control-label"></label>
-                <textarea asp-for="logo" class="form-control" id="logo"></textarea>
+                <select asp-for="logo" class="form-control" asp-items="Model.logos">
+                    <option>Select Logo</option>
+                </select>
                 <span asp-validation-for="logo" class="text-danger"></span>
             </div>
+        <br/>
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        @*<div class="form-group">
+            <label asp-for="logo" class="control-label"></label>
+            <textarea asp-for="logo" class="form-control" id="logo"></textarea>
+            <span asp-validation-for="logo" class="text-danger"></span>
+        </div>*@
             <div class="form-group">
                 <label asp-for="Header" class="control-label"></label>
                 <textarea asp-for="Header" class="form-control box-Shadow-light" id="header"></textarea>
@@ -24,10 +32,20 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Body" class="control-label"></label>
-                <textarea asp-for="Body" class="form-control box-Shadow-ligh" id="body"></textarea>
-                <span asp-validation-for="Body" class="text-danger"></span>
+               
+                    <label asp-for="Body" class="control-label"></label>
+                    <textarea asp-for="Body" class="form-control box-Shadow-ligh" id="body"></textarea>
+                    <span asp-validation-for="Body" class="text-danger"></span>               
             </div>
+
+            <div class="form-group">
+                <label asp-for="WatchFace" class="control-label"></label>
+                <select asp-for="WatchFace" class="form-control" asp-items="Model.WatchFaces">
+                    <option>Select Logo</option>
+                </select>
+                <span asp-validation-for="WatchFace" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="ProductDetail" class="control-label"></label>
                 <textarea asp-for="ProductDetail" class="form-control box-Shadow-ligh" id="detailproduct"></textarea>
@@ -37,16 +55,7 @@
                 <input type="submit" value="Save Changes" class="btn btn-primary" />
             </div>
         </form>
-        <form asp-action="Fileupload" method="post" enctype="multipart/form-data">
-
-            <div class="form-group">
-                <label class="control-label">Upload logo</label>
-                <input type="file" class="form-control" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save Changes" class="btn btn-primary" />
-            </div>
-        </form>
+        
         <form method="post" enctype="multipart/form-data"  asp-action="Fileupload">
             <div class="form-group">
                 <div class="col-md-10">
