--- a/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="~/css/site.css" />
         <link href="~/js/summernote/summernote.css" rel="stylesheet" />
         <link href="~/lib/codemirror/codemirror.css" rel="stylesheet" />
+        <link href="~/lib/animate.css/animate.min.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -18,11 +19,12 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         <link href="~/js/summernote/summernote.css" rel="stylesheet" />
         <link href="~/lib/codemirror/codemirror.css" rel="stylesheet" />
+        <link href="~/lib/animate.css/animate.min.css" rel="stylesheet" />
     </environment>
 </head>
 <body>
     <nav class="navbar navbar navbar-fixed-top">
-        <div class="container">
+        <div class="container admin-nav-box">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -39,19 +41,19 @@
 
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-center">
 
                     @if (User.IsInRole("admin"))
                     {
-                        <li><a asp-area="Admin" asp-controller="Admin" asp-action="Index">Landing Page</a></li>
-                        <li><a asp-area="Admin" asp-controller="Admin" asp-action="Dashboard">Dashboard</a></li>
-                        <li><a asp-page="/FileUploadIndex">File Upload</a></li>
-                        <li><a asp-page="/firebaseIndex">Firebase Settings</a></li>
-                        <li>
+                        <li class="effectme"><a asp-area="Admin" asp-controller="Admin" asp-action="Index">Landing Page</a></li>
+                        <li class="effectme"><a asp-area="Admin" asp-controller="Admin" asp-action="Dashboard">Dashboard</a></li>
+                        <li class="effectme"><a asp-page="/FileUploadIndex">File Upload</a></li>
+                        <li class="effectme"><a asp-page="/firebaseIndex">Firebase Settings</a></li>
+                        <li class="effectme">
                             @Html.ActionLink("PushEvent", "PushEvent", "Admin",
                                               new { area = "Admin" })
                         </li>
-                        <li><a asp-area="Admin" asp-controller="Admin" asp-action="UsersAcount">Users Account</a></li>
+                        <li class="effectme"><a asp-area="Admin" asp-controller="Admin" asp-action="UsersAcount">Users Account</a></li>
                     }
                 </ul>
                 <partial asp-area="Admin" name="_LoginPartial" />
