--- a/WebPortalAPI/wwwroot/css/site.css
+++ b/WebPortalAPI/wwwroot/css/site.css
@@ -1,8 +1,9 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
+/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background: #3a5165;
 }
 
 /* Wrapping element */
@@ -10,6 +11,7 @@ body {
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-color:white;
 }
 
 /* Carousel */
@@ -200,4 +202,24 @@ height:500px;
     font-size:70px;
     height:70px;
 
+}
+/*.navbar-center {
+background-color:red!important;
+}
+.navbar-right {
+    background-color: green!important;
+}*/
+.admin-nav-box {
+    background-color: #153148!important;
+    -webkit-box-shadow: -1px 3px 4px -2px rgba(0, 0, 0, 0.14);
+    -moz-box-shadow: -1px 3px 4px -2px rgba(0, 0, 0, 0.14);
+    box-shadow: -1px 3px 4px -2px rgba(0, 0, 0, 0.14);
+}
+.admin-nav-box a {
+    color: white;
+}
+
+.navbar-center > li :hover {
+    background-color: #09406d !important;
+    z-index:1;
 }
