Dashboard Admin Users

--- a/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
@@ -11,6 +11,16 @@
         <link href="~/js/summernote/summernote.css" rel="stylesheet" />
         <link href="~/lib/codemirror/codemirror.css" rel="stylesheet" />
         <link href="~/lib/animate.css/animate.min.css" rel="stylesheet" />
+
+
+        <link href="~/lib/datatables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.foundation.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.jqueryui.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.semanticui.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.uikit.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/jquery.dataTables.min.css" rel="stylesheet" />
+
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -20,6 +30,16 @@
         <link href="~/js/summernote/summernote.css" rel="stylesheet" />
         <link href="~/lib/codemirror/codemirror.css" rel="stylesheet" />
         <link href="~/lib/animate.css/animate.min.css" rel="stylesheet" />
+
+
+        <link href="~/lib/datatables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.foundation.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.jqueryui.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.semanticui.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.uikit.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/jquery.dataTables.min.css" rel="stylesheet" />
+
     </environment>
 </head>
 <body>
@@ -78,11 +98,19 @@
         <script src="~/js/ckeditor/ckeditor.js"></script>
         <script src="~/js/summernote/summernote.js"></script>
         <script src="~/lib/codemirror/codemirror.js"></script>
-        
-        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/theme/monokai.css">        
+
+        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/theme/monokai.css">
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/mode/xml/xml.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/2.36.0/formatting.js"></script>
 
+        <script src="~/lib/datatables/js/dataTables.bootstrap.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.dataTables.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.foundation.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.jqueryui.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.semanticui.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.uikit.min.js"></script>
+        <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
 
     </environment>
     <environment exclude="Development">
@@ -103,9 +131,19 @@
         <script src="~/js/summernote/summernote.js"></script>
         <script src="~/lib/codemirror/codemirror.js"></script>
 
+
         <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/theme/monokai.css">
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/mode/xml/xml.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/2.36.0/formatting.js"></script>
+
+        <script src="~/lib/datatables/js/dataTables.bootstrap.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.dataTables.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.foundation.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.jqueryui.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.semanticui.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.uikit.min.js"></script>
+        <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
 
     </environment>
   
