--- a/WebPortalAPI/Areas/admin/Views/Admin/Index.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Admin/Index.cshtml
@@ -41,34 +41,37 @@
             <div class="form-group">
                 <label asp-for="WatchFace" class="control-label"></label>
                 <select asp-for="WatchFace" class="form-control" asp-items="Model.WatchFaces">
-                    <option>Select Logo</option>
+                    <option>Select Watchface Logo</option>
                 </select>
                 <span asp-validation-for="WatchFace" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="AppleStore" class="control-label"></label>
+                <select asp-for="AppleStore" class="form-control" asp-items="Model.AppleStores">
+                    <option>Select Apple Store Logo</option>
+                </select>
+                <span asp-validation-for="AppleStore" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label asp-for="GooglePlay" class="control-label"></label>
+                <select asp-for="GooglePlay" class="form-control" asp-items="Model.GooglePlays">
+                    <option>Select Google Play Logo</option>
+                </select>
+                <span asp-validation-for="GooglePlay" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="ProductDetail" class="control-label"></label>
-                <textarea asp-for="ProductDetail" class="form-control box-Shadow-ligh" id="detailproduct"></textarea>
+                <textarea asp-for="ProductDetail" class="form-control box-Shadow-ligh" id="ProductDetail"></textarea>
                 <span asp-validation-for="ProductDetail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save Changes" class="btn btn-primary" />
             </div>
         </form>
-        
-        <form method="post" enctype="multipart/form-data"  asp-action="Fileupload">
-            <div class="form-group">
-                <div class="col-md-10">
-                    <p>Upload one or more files using this form:</p>
-                    <input type="file" name="files" multiple>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-10">
-                    <input type="submit" value="Upload">
-                </div>
-            </div>
-        </form>
+       
     </div>
 </div>
 
