--- a/WebPortalAPI/wwwroot/css/site.css
+++ b/WebPortalAPI/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
+/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
     padding-top: 50px;
@@ -200,4 +200,31 @@ height:500px;
     font-size:70px;
     height:70px;
 
+}
+.product-details {
+    color: #fff;
+    font-family: Righteous;
+    font-size: 50px;
+    font-weight:600;
+}
+.product-detail-red {
+    color: #fff;
+    font-family: Righteous;
+    font-size: 50px;
+    background-color: red;
+    height:200px;
+    margin: 0px 100px 100px 100px;
+    width:80%;
+}
+.pt10{
+    padding-top:10px;
+}
+.btn-blue {
+    background-color: #01224b;
+    border-color: ##01224b !important;
+    color:#fff;
+}
+.btn:hover, .btn:focus, .btn.focus {
+    color: #fff;
+    text-decoration: underline;
 }
