Dashboard UI update1.0

--- a/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Shared/_Layout.cshtml
@@ -88,8 +88,8 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2018 - WebPortalAPI</p>
+        <footer class="footer">
+            <p>&copy; 2018 - Spidey Sense</p>
         </footer>
     </div>
 
