--- a/WebPortalAPI/Areas/admin/Views/Shared/Templates/RadarGraph.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Shared/Templates/RadarGraph.cshtml
@@ -3,7 +3,11 @@
     debugger;
 var ctx = document.getElementById('myChart').getContext('2d');
 
-
+    var myRadarChart = new Chart(ctx, {
+    type: 'radar',
+    data: data,
+    options: options
+});
 
 
     data: {
