--- a/WebPortalAPI/Views/Home/Index.cshtml
+++ b/WebPortalAPI/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
     
     <div class="row">
         <div class="product-detail-red">
-            <div class="col-md-12">
+            <div class="col-md-12 newsLetterEmail">
                 <input type="text" class="form-control" placeholder="Email Adress" />
             </div>
 
