--- a/WebPortalAPI/wwwroot/css/site.css
+++ b/WebPortalAPI/wwwroot/css/site.css
@@ -204,8 +204,8 @@ height:500px;
 
 }
 .product-details {
-    color: #fff;
-    font-family: Righteous;
+    color: #fff !important;
+    font-family: Righteous!important;
     font-size: 50px;
     font-weight:600;
 }
@@ -352,4 +352,8 @@ color:white!important;
     -webkit-box-shadow: 0px 4px 4px -3px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 4px 4px -3px rgba(0,0,0,0.75);
     box-shadow: 0px 4px 4px -3px rgba(0,0,0,0.75);
+}
+.newsLetterEmail {
+padding-top:30px!important;
+
 }
