--- a/WebPortalAPI/Areas/admin/Views/Shared/Templates/Devices.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Shared/Templates/Devices.cshtml
@@ -10,12 +10,78 @@
                     Let us find your @device.Name , choose an option!
                 </div>
                 <div>
-                    <button class="btn btn-default btn-sm">Vibrate</button>
-                    <button class="btn btn-default btn-sm">Alarm</button>
-                    <button class="btn btn-default btn-sm">Flash</button>
+                    <button class="btn btn-default btn-sm vibClick" data-deviceID="@device.Id">Vibrate</button>
+                    <button class="btn btn-default btn-sm alarmClick" data-deviceID="@device.Id">Alarm</button>
+                    <button class="btn btn-default btn-sm flashClick" data-deviceID="@device.Id">Flash</button>
                 </div>
             </div>
-                <hr />
+            <hr />
         }
     </div>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function ()
+    {
+        let url = '@Url.Action("PushEvent", "Admin", new { area = "Admin" })';
+         
+        enableVibrateClickEvent(true, url);
+        enableAlarmClickEvent(true, url);
+        enableFlashClickEvent(true, url);
+
+
+
+
+
+    });
+    
+        
+function enableVibrateClickEvent(enable,url)
+{
+    if (enable)
+    {
+        $(".vibClick").on("click", function () {
+            debugger;
+            let data = constructJsonData("vibrate",$(this));
+            ajaxPost(url, data);          
+        });
+    }
+}
+function enableAlarmClickEvent(enable,url) {
+    if (enable) {
+        $(".alarmClick").on("click", function () {
+            let data = constructJsonData("alarm", $(this));
+            ajaxPost(url, data);   
+        });
+    }
+}
+function enableFlashClickEvent(enable,url) {
+    if (enable) {
+        $(".flashClick").on("click", function () {
+            let data = constructJsonData("flash", $(this));
+            ajaxPost(url, data);   
+        });
+    }
+}
+
+function ajaxPost(url, data)
+{
+    $.ajax({
+        type: "Post",
+        url: url,
+        data: JSON.stringify(data), 
+        dataType: "text",
+        success: function (result) { console.log(result); }      
+    });
+    
+}
+function constructJsonData(eventName, clickedElem)
+{
+    debugger;
+    let data  = $(clickedElem).data("deviceid");
+    return {
+        DeviceID: data,
+        EventName: eventName};
+}
+
+</script>
