--- a/WebPortalAPI/Areas/admin/Views/Shared/Templates/RadarGraph.cshtml
+++ b/WebPortalAPI/Areas/admin/Views/Shared/Templates/RadarGraph.cshtml
@@ -1,4 +1,4 @@
-﻿<canvas id="myChart" width="400" height="400"></canvas>
+﻿@*<canvas id="myChart" width="400" height="400"></canvas>
 <script>
     debugger;
 var ctx = document.getElementById('myChart').getContext('2d');
@@ -16,4 +16,4 @@ var ctx = document.getElementById('myChart').getContext('2d');
         data: [20, 10, 4, 2]
     }]
 }
-</script>
+</script>*@
