--- a/WebPortalAPI/Views/Shared/_Layout.cshtml
+++ b/WebPortalAPI/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-
+                    <li><a asp-area="" asp-controller="Home" asp-action="Gallery">Gallery</a></li>
                     @if (User.IsInRole("admin"))
                     {
                         <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
