Change image css settings

--- a/WebPortalAPI/Views/Home/Gallery.cshtml
+++ b/WebPortalAPI/Views/Home/Gallery.cshtml
@@ -6,7 +6,7 @@
     @foreach(Gallery item in @Model)
     {
         <div class="col-sm-3">
-            <img src="~/images/@(item.imageurl)" style="height: 337px;width: 464px;" />
+            <img src="~/images/@(item.imageurl)" style="height: 100%; padding:10px;" />
         </div>
     }
 </div>
